# task5

./: Cargo.toml  README.md  index.html  sw.js  task5-8006baac519fc290.js  task5-8006baac519fc290_bg.wasm
assets/: sw.js
src/: crafts.txt  direct_reasoning.rs  engine.rs  fact.rs  main.rs  reverse_reasoning.rs  ruletree.rs  test.txt
